Remove console.log

--- a/partials/page1.html
+++ b/partials/page1.html
@@ -2,5 +2,5 @@
     <h2>Introduction &agrave; AngularJS</h2>
     <h4>par Nicola Ricca</h4>
 
-    <img class="img-large" src="assets/images/AngularJs-large.png">
+    <img class="img-large" src="../assets/images/AngularJs-large.png">
 </div>
